set action="#" instead of empty, w3c validator requires

--- a/oneliners/templates/oneliners/elements/question_edit_form.html
+++ b/oneliners/templates/oneliners/elements/question_edit_form.html
@@ -1,4 +1,4 @@
-<form action="" method="post" class="">{% csrf_token %}
+<form action="#" method="post" class="">{% csrf_token %}
     <div class="non-field-errors">{{ form.non_field_errors }}</div>
     <div class="question">
         <h3>Summary<span class="required">*</span></h3>
