--- a/oneliners/templates/oneliners/pages/oneliner_comment.html
+++ b/oneliners/templates/oneliners/pages/oneliner_comment.html
@@ -20,7 +20,7 @@
 
     {% include 'oneliners/elements/please_login.html' %}
 
-    <form action="" method="post">{% csrf_token %}
+    <form action="#" method="post">{% csrf_token %}
         {{ form.honeypot.as_hidden }}
         {{ form.content_type.as_hidden }}
         {{ form.object_pk.as_hidden }}
