--- a/oneliners/templates/oneliners/pages/profile_edit.html
+++ b/oneliners/templates/oneliners/pages/profile_edit.html
@@ -10,7 +10,7 @@
 
     {% include 'oneliners/elements/please_login.html' %}
 
-    <form action="" method="post" role="form">{% csrf_token %}
+    <form action="#" method="post" role="form">{% csrf_token %}
         <div class="non-field-errors">{{ form.non_field_errors }}</div>
         <h3>{{ form.display_name.label }}</h3>
 
