--- a/oneliners/templates/oneliners/elements/oneliner_edit_form.html
+++ b/oneliners/templates/oneliners/elements/oneliner_edit_form.html
@@ -1,4 +1,4 @@
-<form action="" method="post" role="form">{% csrf_token %}
+<form action="#" method="post" role="form">{% csrf_token %}
     <div class="non-field-errors">{{ form.non_field_errors }}</div>
     <div class="oneliner">
         <h3>Summary of the one-liner<span class="required">*</span></h3>
