--- a/oneliners/templates/oneliners/pages/search.html
+++ b/oneliners/templates/oneliners/pages/search.html
@@ -7,7 +7,7 @@
 {% block content %}
 
     <div class="well">
-        <form action="" method="get" class="form-inline" id="search-form" role="form">
+        <form action="#" method="get" class="form-inline" id="search-form" role="form">
             <div class="row">
                 <div class="col-sm-9">
                     <input type="hidden" name="is_advanced" value="1"/>
