button should not contain anchor elements

--- a/oneliners/templates/oneliners/elements/oneliner_edit_form.html
+++ b/oneliners/templates/oneliners/elements/oneliner_edit_form.html
@@ -74,8 +74,9 @@
             {% include 'oneliners/elements/please_login.html' %}
             {% for action in form.actions %}
                 <button class="btn {{ action.cssclass }}" type="submit" name="action" value="{{ action.name }}">
-                    {{ action.name }}</button>{% endfor %}
-            <button class="btn btn-default"><a href="{{ cancel_url }}">Cancel</a></button>
+                    {{ action.name }}</button>
+            {% endfor %}
+            <a class="btn btn-default" href="{{ cancel_url }}">Cancel</a>
         </div>
     </div>
 </form>
