--- a/oneliners/templates/oneliners/pages/oneliner_comment.html
+++ b/oneliners/templates/oneliners/pages/oneliner_comment.html
@@ -38,7 +38,7 @@
         <div class="form-group">
             {% include 'oneliners/elements/please_login.html' %}
             <button class="btn btn-primary" type="submit" name="submit" value="Post">Post</button>
-            <button class="btn btn-default"><a href="{{ cancel_url }}">Cancel</a></button>
+            <a class="btn btn-default" href="{{ cancel_url }}">Cancel</a>
         </div>
     </form>
 
