--- a/oneliners/templates/oneliners/pages/profile_edit.html
+++ b/oneliners/templates/oneliners/pages/profile_edit.html
@@ -47,7 +47,7 @@
         <div class="form-group">
             {% include 'oneliners/elements/please_login.html' %}
             <button type="submit" name="action" class="btn btn-primary" value="Save">Save</button>
-            <button class="btn btn-default"><a href="{{ cancel_url }}">Cancel</a></button>
+            <a class="btn btn-default" href="{{ cancel_url }}">Cancel</a>
         </div>
     </form>
 
