--- a/oneliners/templates/oneliners/elements/oneliner.html
+++ b/oneliners/templates/oneliners/elements/oneliner.html
@@ -71,9 +71,10 @@
                     {% get_comment_count for oneliner as comment_count %}
                     {% if comment_count > 0 %}
                         <div class="related">
-                            <h3 class="comments-toggle {{ comments_expanded }}">
-                                <img src="{% static 'images/arrows0.png' %}" alt="[comments]"/>Comments
-                                ({{ comment_count }})</h3>
+                            <h4 class="comments-toggle {{ comments_expanded }}">
+                                <i class="glyphicon glyphicon-chevron-{% if comments_expanded %}down{% else %}right{% endif %}"></i>
+                                Comments
+                                ({{ comment_count }})</h4>
 
                             <div class="well comments {{ comments_expanded }}">
                                 {% render_comment_list for oneliner %}
