show beta link to admins only, for now

--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -7,7 +7,7 @@
     {% if SERVER_NAME != 'www.bashoneliners.com' %}
         <a href="http://bashoneliners.com/" class="btn btn-success pull-right">bashoneliners.com</a>
     {% endif %}
-    {% if SERVER_NAME != 'beta.bashoneliners.com' %}
+    {% if SERVER_NAME != 'beta.bashoneliners.com' and user.is_superuser %}
         <a href="http://beta.bashoneliners.com/" class="btn btn-info pull-right">Try the BETA site</a>
     {% endif %}
 {% endblock %}
