adjusted the texts

--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -23,16 +23,14 @@
 {% block content %}
 
     <div class="alert alert-block alert-info">
-        We aim to collect <strong>practical</strong>,
-        <strong>well-explained</strong> bash one-liners,
-        and <strong>promote best practices</strong> in shell scripting.
+        We aim to collect practical,
+        well-explained bash one-liners,
+        and promote best practices in shell scripting.
         To get the latest bash one-liners,
         follow <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter,
         or subscribe to our <a href="{% url 'oneliners.feeds.oneliner' %}">rss feed</a>.
         If you find any problems,
-        <a href="https://github.com/janosgyerik/bashoneliners/issues">report a bug on GitHub</a>,
-        or send an email to our <a href="mailto:bashoneliners@googlegroups.com">public mailing list</a>
-        or <a href="mailto:info@bashoneliners.com">private email</a>.
+        <a href="https://github.com/janosgyerik/bashoneliners/issues">report a bug on GitHub</a>.
     </div>
 
     <h2>Tags</h2>
