--- a/oneliners/templates/oneliners/pages/sourcecode.html
+++ b/oneliners/templates/oneliners/pages/sourcecode.html
@@ -8,11 +8,11 @@
 
     <div class="alert alert-block alert-info">
         The site is still pretty far from what we want it to be.
-        Mainly we need more Django coders,
-        but also reviewers and helpful comments on the not-so-well-written one-liners.
-        At the minimum it would help a lot if you could spread the word and talk about this site on Twitter, Google+,
-        Facebook,
-        or your other social outlets. All of them.
+        Mainly we need more Django developers.
+        But also reviewers and helpful comments on the not-so-well-written one-liners.
+        At the minimum it would help a lot if you could spread the word and talk about this site
+        on Twitter, Google+, Facebook, Reddit
+        or other social media accounts.
     </div>
 
     <p>
@@ -21,24 +21,22 @@
         Do <a href="mailto:info@bashoneliners.com">let us know</a> if we missed something.
     </p>
 
-    <p>Right now the site is still pretty far from what we want it to be.</p>
+    <p>Right now the site is still pretty far from what we want it to be. Our next bigger goals:</p>
 
     <ul>
         <li>
             <strong>Perfect one-liners following today's best-practices:</strong>
             Expert users should be able to edit and improve poorly written one-liners.
             The site needs peer-review and collaborative editing features,
-            similar to <a href="http://stackoverflow.com/">stackoverflow.com</a>.
-            Keep in mind that StackOverflow is about questions and answers.
-            On StackOverflow, answers do not collaborate with each other,
-            and very often the accepted answer is not the best solution.
+            similar to <a href="http://stackoverflow.com/">stackoverflow.com</a>, but a bit differently.
+            On Stack Overflow, answers do not collaborate with each other,
+            and sometimes the accepted answer is not necessarily the best solution.
             Very often the combination of multiple answers is the best solution.
             Our goal here is to encourage users to optimize the heck out of every single one-liner until it is perfect.
         </li>
         <li>
             <strong>Gamification:</strong>
-            Gamification features are probably crucial to attract more users,
-            and for keeping existing users interested.
+            Gamification features are probably crucial to attract and motivate users.
             Designing the system is a very complex subject,
             it takes much more than just coding.
         </li>
