works with django 1.9, but had to take down comments, and disable feeds too

--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -16,7 +16,7 @@
     open-source, django, python, git, github, bazaar, launchpad, collaborate{% endblock %}
 
 {% block description %}A collection of practical and well-explained bash one-liners and shell script tips and tricks for
-    GNU Linux, UNIX or BSD systems. Post your clever one-liners, search, subscribe to our feeds, login using Open ID.
+    GNU Linux, UNIX or BSD systems. Post your clever one-liners, search, login using Open ID.
     Open-source project, using Django, Python, jQuery, Git, GitHub, Bazaar, Launchpad, HTML5, Bootstrap from
     Twitter.{% endblock %}
 
@@ -25,10 +25,9 @@
     <div class="alert alert-block alert-info">
         We aim to collect practical,
         well-explained bash one-liners,
-        and promote best practices in shell scripting.
-        To get the latest bash one-liners,
-        follow <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter,
-        or subscribe to our <a href="{% url 'oneliners.feeds.oneliner' %}">rss feed</a>.
+        and promote best practices in Bash shell scripting.
+        To get the latest Bash one-liners,
+        follow <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.
         If you find any problems,
         <a href="https://github.com/janosgyerik/bashoneliners/issues">report a bug on GitHub</a>.
     </div>
