--- a/oneliners/templates/oneliners/pages/login.html
+++ b/oneliners/templates/oneliners/pages/login.html
@@ -25,6 +25,17 @@
     <div class="row">
         <form class="openid-form form-horizontal">
             <div class="form-group col-sm-4">
+                <p class="form-control-static">Twitter</p>
+            </div>
+            <div class="form-group col-sm-2">
+                <a class="btn btn-primary" href="{% url 'social:begin' 'twitter' %}">Twitter</a>
+            </div>
+        </form>
+    </div>
+
+    <div class="row">
+        <form class="openid-form form-horizontal">
+            <div class="form-group col-sm-4">
                 <p class="form-control-static">Yahoo! OAuth2</p>
             </div>
             <div class="form-group col-sm-2">
