--- a/oneliners/templates/oneliners/pages/login.html
+++ b/oneliners/templates/oneliners/pages/login.html
@@ -14,6 +14,17 @@
     <div class="row">
         <form class="openid-form form-horizontal">
             <div class="form-group col-sm-4">
+                <p class="form-control-static">GitHub</p>
+            </div>
+            <div class="form-group col-sm-2">
+                <a class="btn btn-primary" href="{% url 'social:begin' 'github' %}">GitHub</a>
+            </div>
+        </form>
+    </div>
+
+    <div class="row">
+        <form class="openid-form form-horizontal">
+            <div class="form-group col-sm-4">
                 <p class="form-control-static">Google OAuth2</p>
             </div>
             <div class="form-group col-sm-2">
