--- a/oneliners/templates/comments/list.html
+++ b/oneliners/templates/comments/list.html
@@ -5,7 +5,7 @@
             {{ comment.comment|markdown:"safe" }}
             <small>
                 by <a
-                    href="{% url 'oneliners.views.profile' comment.user.pk %}"><span>{{ comment.user.hackerprofile.get_display_name }}</span>
+                    href="{% url 'profile' comment.user.pk %}"><span>{{ comment.user.hackerprofile.get_display_name }}</span>
             </a>
                 on <span>{{ comment.submit_date }}</span>
             </small>
