--- a/oneliners/templates/oneliners/elements/profile_nav.html
+++ b/oneliners/templates/oneliners/elements/profile_nav.html
@@ -5,6 +5,6 @@
         </li>
     {% endif %}
     <li class="{{ active_oneliners }}">
-        <a href="{% url 'profile_oneliners' hacker.pk %}">One-Liners</a>
+        <a href="{% url 'profile_oneliners_of' hacker.pk %}">One-Liners</a>
     </li>
 </ul>
