--- a/oneliners/templates/oneliners/pages/feeds.html
+++ b/oneliners/templates/oneliners/pages/feeds.html
@@ -9,7 +9,7 @@
 
     <dl class="rss">
         <dt><a href="{% url 'oneliners.feeds.oneliner' %}"><span class="label label-info">RSS</span> One-Liners</a></dt>
-        <dd>Recently posted bash one-liners.</dd>
+        <dd>Recently posted Bash one-liners.</dd>
     </dl>
 
 {% endblock %}
