--- a/oneliners/templates/oneliners/pages/mission.html
+++ b/oneliners/templates/oneliners/pages/mission.html
@@ -36,6 +36,6 @@
     </dl>
 
     <p>If you are interested in joining this open-source project, head over to the <a
-            href="{% url 'oneliners.views.sourcecode' %}">source code</a> page.</p>
+            href="{% url 'sourcecode' %}">source code</a> page.</p>
 
 {% endblock %}
