--- a/oneliners/templates/oneliners/pages/profile_oneliners.html
+++ b/oneliners/templates/oneliners/pages/profile_oneliners.html
@@ -8,7 +8,7 @@
 
     <h2 class="page-header">One-Liners
         {% if user == hacker %}
-            <a href="{% url 'oneliners.views.oneliner_new' %}" class="btn pull-right">Post a one-liner</a>
+            <a href="{% url 'oneliner_new' %}" class="btn pull-right">Post a one-liner</a>
         {% endif %}
     </h2>
 
