--- a/oneliners/templates/internal_error.html
+++ b/oneliners/templates/internal_error.html
@@ -39,7 +39,7 @@
             Money donated here can only be used to pay for our hosting bills,
             such as the regular bills and upgrades to improved services.
             We cannot withdraw this money in cash and party it away.
-            Another way to help us is by <a href="{% url 'oneliners.views.sourcecode' %}">joining the project</a> and
+            Another way to help us is by <a href="{% url 'sourcecode' %}">joining the project</a> and
             make it hugely popular and profitable together
             so that we don't need to worry about petty hosting bills...</p>
 
