--- a/oneliners/templates/oneliners/elements/oneliner.html
+++ b/oneliners/templates/oneliners/elements/oneliner.html
@@ -21,7 +21,7 @@
                     <h3 class="summary">
                         <a href="{% url 'oneliner' oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
                         {% if user == oneliner.user %}
-                            <a class="btn btn-default" href="{% url 'oneliners.views.oneliner_edit' oneliner.pk %}">
+                            <a class="btn btn-default" href="{% url 'oneliner_edit' oneliner.pk %}">
                                 <i class="glyphicon glyphicon-pencil"></i>{% if not oneliner.is_published %}
                                 <span class="draft">(Not published!)</span>{% endif %}</a>
                         {% endif %}
@@ -31,7 +31,7 @@
 
                     <p class="author">
                         <small>
-                            &mdash; by <a href="{% url 'profile' oneliner.user.pk %}"><span>{{ oneliner.user.hackerprofile.get_display_name }}</span></a>
+                            &mdash; by <a href="{% url 'profile_of' oneliner.user.pk %}"><span>{{ oneliner.user.hackerprofile.get_display_name }}</span></a>
                             on <span>{{ oneliner.created_dt }}</span>
                         </small>
                     </p>
@@ -50,7 +50,7 @@
 
                     {% if user.is_authenticated and not nobuttons %}
                         <p>
-                            <a href="{% url 'oneliners.views.oneliner_alternative' oneliner.pk %}"
+                            <a href="{% url 'oneliner_alternative' oneliner.pk %}"
                                class="btn btn-default">Post an alternative one-liner</a>
                         </p>
                     {% endif %}
