--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -44,7 +44,7 @@
 
     <h2 class="page-header">One-Liners
         {% if user.is_authenticated %}
-            <a href="{% url 'oneliners.views.oneliner_new' %}" class="btn btn-primary pull-right">Post a one-liner</a>
+            <a href="{% url 'oneliner_new' %}" class="btn btn-primary pull-right">Post a one-liner</a>
         {% endif %}
     </h2>
 
