--- a/oneliners/templates/oneliners/pages/oneliner.html
+++ b/oneliners/templates/oneliners/pages/oneliner.html
@@ -4,7 +4,7 @@
 
 {% block pageheader %}One-Liner
     {% if user.is_authenticated %}
-        <a href="{% url 'oneliners.views.oneliner_new' %}" class="btn btn-primary pull-right">Post a one-liner</a>
+        <a href="{% url 'oneliner_new' %}" class="btn btn-primary pull-right">Post a one-liner</a>
     {% endif %}
 {% endblock %}
 
