--- a/oneliners/templates/oneliners/pages/profile_base.html
+++ b/oneliners/templates/oneliners/pages/profile_base.html
@@ -4,7 +4,7 @@
 
 {% block pageheader %}{{ hacker.hackerprofile.get_display_name|default:'Anonymous' }}
     {% if user == hacker %}
-        <a href="{% url 'oneliners.views.profile_edit' %}" class="btn btn-primary pull-right">Edit your profile</a>
+        <a href="{% url 'profile_edit' %}" class="btn btn-primary pull-right">Edit your profile</a>
     {% endif %}
 {% endblock %}
 
