Add link to re-link accounts form

--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -32,6 +32,8 @@
         <a href="https://github.com/janosgyerik/bashoneliners/issues">report a bug on GitHub</a>.
     </div>
 
+    {% include 'oneliners/elements/warnings/relink.html' %}
+
     <h2>Tags</h2>
 
     <ul class="nav nav-pills tags">
