--- a/oneliners/templates/oneliners/pages/profile_base.html
+++ b/oneliners/templates/oneliners/pages/profile_base.html
@@ -10,6 +10,8 @@
 
 {% block content %}
 
+    {% include 'oneliners/elements/warnings/relink.html' %}
+
     <table class="profile table table-bordered">
         <tbody>
         <tr>
