--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -23,8 +23,8 @@
 {% block content %}
 
     <div class="alert alert-block alert-info">
-        We aim to collect practical,
-        well-explained bash one-liners,
+        We collect practical,
+        well-explained Bash one-liners,
         and promote best practices in Bash shell scripting.
         To get the latest Bash one-liners,
         follow <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.
