Update meta tag content

--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -12,13 +12,12 @@
     {% endif %}
 {% endblock %}
 
-{% block keywords %}bash, ksh, shell, script, one-liner, oneliner, tips, tricks, linux, unix, vote, rank, rss,
-    open-source, django, python, git, github, bazaar, launchpad, collaborate{% endblock %}
+{% block keywords %}bash, ksh, shell, script, one-liner, oneliner, tips, tricks, snippets, linux, unix, vote,
+    open-source, django, python, git, github{% endblock %}
 
-{% block description %}A collection of practical and well-explained bash one-liners and shell script tips and tricks for
-    GNU Linux, UNIX or BSD systems. Post your clever one-liners, search, login using Open ID.
-    Open-source project, using Django, Python, jQuery, Git, GitHub, Bazaar, Launchpad, HTML5, Bootstrap from
-    Twitter.{% endblock %}
+{% block description %}A collection of practical and well-explained Bash one-liners and shell script tips, tricks,
+    snippets for GNU Linux, UNIX or BSD systems. Post your clever one-liners, search, login using SSO or Open ID.
+    Open-source project, using Django, Python, jQuery, Git, GitHub, HTML5, Bootstrap from Twitter.{% endblock %}
 
 {% block content %}
 
