Update source code content

--- a/oneliners/templates/oneliners/pages/sourcecode.html
+++ b/oneliners/templates/oneliners/pages/sourcecode.html
@@ -7,12 +7,11 @@
 {% block content %}
 
     <div class="alert alert-block alert-info">
-        The site is still pretty far from what we want it to be.
+        The site is far from what we want it to be.
         Mainly we need more Django developers.
-        But also reviewers and helpful comments on the not-so-well-written one-liners.
+        But also reviewers of the contributed one-liners, to improve or remove those that are sub-optimal.
         At the minimum it would help a lot if you could spread the word and talk about this site
-        on Twitter, Google+, Facebook, Reddit
-        or other social media accounts.
+        on Twitter, Google+, Facebook, Reddit or other social media.
     </div>
 
     <p>
@@ -30,15 +29,14 @@
             The site needs peer-review and collaborative editing features,
             similar to <a href="http://stackoverflow.com/">stackoverflow.com</a>, but a bit differently.
             On Stack Overflow, answers do not collaborate with each other,
-            and sometimes the accepted answer is not necessarily the best solution.
-            Very often the combination of multiple answers is the best solution.
+            and sometimes the accepted answer is not optimal.
+            Sometimes the best answer would be a combination of multiple answers.
             Our goal here is to encourage users to optimize the heck out of every single one-liner until it is perfect.
         </li>
         <li>
             <strong>Gamification:</strong>
-            Gamification features are probably crucial to attract and motivate users.
-            Designing the system is a very complex subject,
-            it takes much more than just coding.
+            Gamification features could be important to attract and motivate contributions.
+            Designing the system is a very complex subject, it takes much more than just coding.
         </li>
     </ul>
 
