--- a/oneliners/templates/oneliners/elements/oneliner.html
+++ b/oneliners/templates/oneliners/elements/oneliner.html
@@ -60,8 +60,12 @@
                     {% endwith %}
 
                     {% if user.is_authenticated %}
-                            <a href="{% url 'oneliner_alternative' oneliner.pk %}"
-                               class="btn btn-default">Post an alternative one-liner</a>
+                        <a href="{% url 'oneliner_alternative' oneliner.pk %}"
+                           class="btn btn-default">Post an alternative one-liner</a>
+                    {% endif %}
+
+                    {% if user.is_staff and user != oneliner.user %}
+                        <a class="btn btn-danger" href="{% url 'oneliner_edit' oneliner.pk %}">Edit</a>
                     {% endif %}
                     </p>
                     {% endif %}
