Update UpvoteJS library (modern Stack Overflow widget)

--- a/oneliners/templates/html5.html
+++ b/oneliners/templates/html5.html
@@ -31,7 +31,7 @@
     <!-- CSS concatenated and minified via ant build script-->
     <link rel="stylesheet" href="{% static 'css/smoothness/jquery-ui-1.8.17.custom.css' %}">
     <link rel="stylesheet" href="{% static 'bs3/dist/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'jquery-upvote/jquery.upvote.css' %}">
+    <link rel="stylesheet" href="{% static 'upvotejs/upvotejs.css' %}">
     <link rel="stylesheet" href="{% static 'css/bashoneliners.css' %}">
     <!-- end CSS-->
 
@@ -69,7 +69,7 @@
 <script defer src="{% static 'js/django-jquery-csrf.js' %}"></script>
 <script defer src="{% static 'bs3/dist/js/bootstrap.min.js' %}"></script>
 <script defer src="{% static 'js/showdown.js' %}"></script>
-<script defer src="{% static 'jquery-upvote/jquery.upvote.js' %}"></script>
+<script defer src="{% static 'upvotejs/upvotejs.vanilla.js' %}"></script>
 <script defer src="{% static 'js/bashoneliners.js' %}"></script>
 <!-- end scripts-->
 
