Move Bash One-Liners to suffix in title instead of prefix

--- a/oneliners/templates/base.html
+++ b/oneliners/templates/base.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block title %}Bash One-Liners :: {% block pagetitle %}{% endblock %}{% endblock %}
+{% block title %}{% block pagetitle %}{% endblock %} | Bash One-Liners{% endblock %}
 
 {% block navbar %}
 
